# Engine

./: .gitignore  CMakeLists.txt  Engine.sln  LICENSE  README.md  setup.bat
Engine/: Engine.rc  Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/Engine/: Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/Engine/include/: Camera.h  Model.h  Shader.h  Texture.h
Engine/Engine/include/Shader/: Shader.h
Engine/Engine/include/data/: Material.h  Mesh.h  Texture.h  Vertex.h
Engine/Engine/include/debug/: DebugMenu.h
Engine/Engine/include/render/: FrameBuffer.h
Engine/Engine/shaders/: FragmentShader.glsl  VertexShader.glsl
Engine/Engine/shaders/light/: Color.fs  Color.vs
Engine/Engine/src/: Camera.cpp  Model.cpp  Shader.cpp  Texture.cpp  main.cpp
Engine/Engine/src/Shader/: Shader.cpp
Engine/Engine/src/data/: Material.cpp  Mesh.cpp  Texture.cpp
Engine/Engine/src/debug/: DebugMenu.cpp
Engine/Engine/src/glad/: glad.c
Engine/Engine/src/render/: FrameBuffer.cpp
Engine/include/: Camera.h  Entity.h  Model.h  Shader.h
Engine/include/component/: Component.h  Light.h  Model.h  Transform.h
Engine/include/component/physics/: EditorCollider.h  Fluid.h
Engine/include/data/: AxisGrid.h  BVH.h  BoundingBox.h  Color.h  CubeMap.h  Material.h  Mesh.h  OBoundingBox.h  Texture.h  Transform.h  Triangle.h  Type.h  Vertex.h
Engine/include/data/mesh/: Mesh.h  MeshData.h  WireCone.h  WireConeFrustum.h  WireCube.h  WireSphere.h
Engine/include/data/physics/: HitInfo.h  Ray.h  RaycastHit.h
Engine/include/data/template/: Singleton.h
Engine/include/debug/: DebugMenu.h
Engine/include/glad/: glad.h
Engine/include/maths/: Math.h
Engine/include/maths/glm/: glm.cppm
Engine/include/physics/: Physics.h  RayIntersection.h
Engine/include/render/: ComputeShader.h  DepthBuffer.h  FrameBuffer.h  RayTracer.h  Shader.h
Engine/include/system/: Editor.h  EntityManager.h  GlobalSettings.h  Input.h  Time.h
Engine/include/system/editor/: Editor.h  EditorCamera.h  Gizmo.h  Inspector.h  Outliner.h  SceneManager.h  ScreenSettings.h
Engine/include/utils/: Gizmo.h  ImFileDialog.h  ImGui_Utils.h  Utils.h
Engine/resources/: resource.h
Engine/resources/scenes/: Blank.devil  DefaultScene.devil  DefaultSceneColored.devil  Fluid.devil  NinjaScene.devil  OneSphereScene.devil  Shadow.devil  SmallHouse.devil  Textured.devil  TreeScene.devil  Yvisaur.devil
Engine/shaders/: FragmentShader.glsl  VertexShader.glsl
Engine/shaders/compute/: AccumulateComputeShader.glsl  BlitTexturesComputeShader.glsl
Engine/shaders/depth/: DepthQuadFragmentShader.glsl  DepthQuadVertexShader.glsl  ShadowMapFragmentShader.glsl  ShadowMapVertexShader.glsl
Engine/shaders/gizmo/: GizmoFragmentShader.glsl  GizmoVertexShader.glsl
Engine/shaders/grid/: AxisGridFragmentShader.glsl  AxisGridVertexShader.glsl
Engine/shaders/outline/: OutlineBlitFragmentShader.glsl  OutlineDilatingFragmentShader.glsl  OutlineFragmentShader.glsl  OutlineQuadVertexShader.glsl  OutlineVertexShader.glsl
Engine/shaders/raytracing/: RayTracerFragmentShader.glsl  RayTracerVertexShader.glsl
Engine/shaders/skybox/: SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl
Engine/src/: Camera.cpp  Entity.cpp  main.cpp
Engine/src/component/: Component.cpp  Light.cpp  Model.cpp  Transform.cpp
Engine/src/data/: AxisGrid.cpp  BVH.cpp  BoundingBox.cpp  Color.cpp  CubeMap.cpp  Material.cpp  Mesh.cpp  OBoundingBox.cpp  Texture.cpp  Transform.cpp
Engine/src/debug/: DebugMenu.cpp
Engine/src/maths/: Maths.cpp
Engine/src/physics/: Physics.cpp  RayIntersection.cpp
Engine/src/render/: ComputeShader.cpp  DepthBuffer.cpp  FrameBuffer.cpp  RayTracer.cpp  Shader.cpp  stb_image.cpp
Engine/src/system/: Editor.cpp  EntityManager.cpp  Input.cpp  Time.cpp
Engine/src/testing/: main_testing.cpp
Engine/src/utils/: Gizmo.cpp  ImFileDialog.cpp  ImGui_Utils.cpp  Utils.cpp
Scripts/: SetupBuildDebug.bat  SetupBuildRelease.bat
ThirdPartyLibs/Libs/: assimp-vc143-mt.lib  glfw3.lib
imgui/: imgui_impl_glfw.cpp
(+31 files in other folders)
